chore: init vitest

--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest --run"
   },
   "dependencies": {
     "next": "14.0.3",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-router": "^6.20.1",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "vitest": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
