--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest --run"
   },
   "dependencies": {
+    "matter-js": "^0.19.0",
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18",
@@ -18,6 +19,7 @@
     "vitest": "^1.0.4"
   },
   "devDependencies": {
+    "@types/matter-js": "^0.19.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
