--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest --run"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
     "matter-js": "^0.19.0",
     "next": "14.0.3",
     "react": "^18.2.0",
