--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
+    "three": "^0.160.0",
     "vitest": "^1.0.4"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.160.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
