--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
+    "ahooks": "^3.7.8",
     "matter-js": "^0.19.0",
     "next": "14.0.3",
     "react": "^18.2.0",
