--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "ahooks": "^3.7.8",
+    "immer": "^10.0.3",
     "matter-js": "^0.19.0",
     "next": "14.0.3",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
     "three": "^0.160.0",
+    "use-immer": "^0.9.0",
     "vitest": "^1.0.4"
   },
   "devDependencies": {
