--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native": "^6.1.9",
     "ahooks": "^3.7.8",
     "immer": "^10.0.3",
+    "lodash-es": "^4.17.21",
+    "lodash.chunk": "^4.2.0",
     "matter-js": "^0.19.0",
     "next": "14.0.3",
     "react": "^18.2.0",
