--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.9",
     "ahooks": "^3.7.8",
+    "classnames": "^2.5.1",
     "immer": "^10.0.3",
     "lodash-es": "^4.17.21",
     "lodash.chunk": "^4.2.0",
