--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "immer": "^10.0.3",
     "lodash-es": "^4.17.21",
     "lodash.chunk": "^4.2.0",
+    "matter-attractors": "^0.1.6",
     "matter-js": "^0.19.0",
     "next": "14.0.3",
     "react": "^18.2.0",
